Ensure torn edges are aligned with choice text.

--- a/app.css
+++ b/app.css
@@ -76,6 +76,7 @@ body.fantasy {
 .choice {
   display: flex;
   margin-bottom: 1em;
+  align-items: center;
 }
 
 .problem {
